jira/jira-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jira-service
  namespace: test
spec:
  type: NodePort
  selector:
    app: jira
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30000
