jira/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: jira-to-postgres
  namespace: test
spec:
  podSelector:
    matchLabels:
      app: postgresql
    ingress:
      - from:
        - podSelector:
            matchLabels:
              app: jira
        ports:
          - protocol: TCP
            port: 5432
    policyTypes:
      - ingress
